Wed Dec  3 09:26:29 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/xpath.rb (REXML::XPath.first): apply documentation
	  patch from Ken Bloom in [ruby-core:20213].

	* lib/rexml/xpath.rb (REXML::XPath.each): ditto.

Wed Dec  3 02:53:24 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_range.rb: add a test.

Wed Dec  3 02:26:07 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_string.rb: add some tests.

Mon Dec  1 12:00:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (rb_fiber_start): calls with exact argument number.
	  [ruby-core:20088]

Mon Dec  1 16:06:15 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* signal.c (register_sigaltstack): no need to define on non-sigaltstack
	  platform.

Sun Nov 30 21:41:10 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* man/rake.1: new manual page

Sat Nov 29 23:56:44 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* man/irb.1 (EXAMPLES): new section

Sat Nov 29 19:19:32 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regparse.c (is_invalid_quantifier_target): Perl and old Ruby
	  accepts quantifier on anchors.  [ruby-core:20161]

Sat Nov 29 00:18:30 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* cont.c (fiber_alloc): separate allocation and initialization.
	  allow subclass to override #initialize.   [ruby-core:20086]

Fri Nov 28 18:31:21 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (sock_s_getaddrinfo): refactored to remove
	  code duplication regarding getaddrinfo.

	* ext/socket/socket.c (sock_getaddrinfo): should have updated for
	  Mac OS X.  a patch from Shumpei Akai in [ruby-dev:37234]

Thu Nov 27 21:41:29 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* strftime.c (rb_strftime): should add padding for %%.

Thu Nov 27 16:32:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (register_sigaltstack): stores alt stack for debug
	  purpose.

Thu Nov 27 16:12:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (ruby_sigaction_t): added.
